--- a/index.html
+++ b/index.html
@@ -236,6 +236,19 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
+                            <h3 class="job-title">Research Bursary</h3>
+                            <div class="time">May 2022</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Concordia University</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p></p>
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
                             <h3 class="job-title">Dean's List in every semester</h3>
                             <div class="time">Aug 2019 – Aug 2022</div>
                         </div><!--//upper-row-->
